k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-sunny-days-ahead-dev
  labels:
    tenant: opsera
    app: sunny-days-ahead
    managed-by: opsera-c2c
