k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sunny-days-ahead
  namespace: opsera-sunny-days-ahead-dev
  labels:
    app: sunny-days-ahead
    tenant: opsera
    environment: dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: sunny-days-ahead-dev.agent.opsera.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sunny-days-ahead
            port:
              number: 80
